trunk/Archive2/61/dbaf645d2fcbd2/output
In file included from main.cpp:2:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/numeric:62:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_numeric.h:127:9: error: assigning to 'int' from incompatible type 'char *'
        __init = __init + *__first;
               ^ ~~~~~~~~~~~~~~~~~
main.cpp:19:18: note: in instantiation of function template specialization 'std::accumulate<char (*)[2], int>' requested here
    int s = std::accumulate(begin(a), end(a), 0);
                 ^
1 error generated.
